<resources>
    <string name="app_name">OptionMenu</string>
    <string name="save">Salvar</string>
    <string name="delete">Excluir</string>
    <string name="was_clicked">foi clicado</string>
    <string name="use_data">Usar Dados</string>
    <string name="blue">Azul</string>
    <string name="red">Vermelho</string>
    <string name="submenu">Submenu</string>
    <string name="option1">Opção 1</string>
    <string name="option2">Opção 2</string>
</resources>