<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuItemSave"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuItemDelete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuUseData"
        android:checkable="true"
        android:onClick="useData"
        android:title="@string/use_data" />
    <group
        android:id="@+id/groupColors"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menuItemBlue"
            android:title="@string/blue" />
        <item
            android:id="@+id/menuItemRed"
            android:title="@string/red" />
    </group>
    <item
        android:id="@+id/menuSubmenuItem"
        android:title="@string/submenu" >
        <menu >
            <item
                android:id="@+id/submenuItemOption1"
                android:title="@string/option1" />
            <item
                android:id="@+id/submenuItemOption2"
                android:title="@string/option2" />
        </menu>
    </item>
</menu>